@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.106 2024/02/26 18:22:16 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.107 2024/05/20 23:21:29 greg Exp $
 #
 # Radiance makefile for utility programs
 #
@@ -172,7 +172,7 @@ dcglare:	dcglare.o cmbsdf.o cmatrix.o cmglare.o
 -lrtrad $(MLIB)
 
 rcomb.o:	../common/calcomp.h ../common/rtio.h \
-../common/paths.h
+../common/paths.h ../common/rtprocess.h
 
 eplus_adduvf.o:	../common/triangulate.h ../common/rtprocess.h \
 ../common/paths.h ../common/rtio.h ../common/random.h \
