@@ -2695,3 +2695,5 @@ Added -i option to gendaymtx to match -i option of gendaylit.
 Thanks to Yongqing for initial implementation.
 
 Changed rcrop so negative #rows or #cols counts back from end.
+
+Added rcomb -n option for multi-processing of very large matrices.
